kubernetes/geonetwork-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: geonetwork
  name: geonetwork
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labTEST
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labTEST
        io.kompose.service: geonetwork
    spec:
      containers:
      - env:
        - name: DATA_DIR
          value: /var/lib/geonetwork_data
        - name: POSTGRES_DB_HOST
          value: db4geonetwork
        - name: POSTGRES_DB_PASSWORD
          value: geonetwork
        - name: POSTGRES_DB_USERNAME
          value: geonetwork
        image: geonetwork:postgres
        name: core4geonetwork
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/geonetwork_data
          name: geonetwork
      restartPolicy: Always
      volumes:
      - name: geonetwork
        persistentVolumeClaim:
          claimName: geonetwork
status: {}
