kubernetes/geoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: geoserver
  name: labtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labTEST
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labTEST
        io.kompose.service: geoserver
    spec:
      containers:
      - env:
        - name: GEOSERVER_DATA_DIR
          value: geonetwork
        - name: GEOWEBCACHE_CACHE_DIR
          value: geonetwork
        image: kartoza/geoserver:2.13.0
        name: geoserver4geonetwork
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/geoserver/data_dir
          name: geoserver-data
      restartPolicy: Always
      volumes:
      - name: geoserver-data
        persistentVolumeClaim:
          claimName: geoserver-data
status: {}
