kubernetes/geoserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: geoserver
  labels:
    name: geoserver
spec:
  containers:
    - name: geoserver4geonetwork
      image: kartoza/geoserver:2.13.0
      ports:
        - containerPort: 8080
          protocol: TCP
      volumeMounts:
        - mountPath: /opt/geoserver/data_dir
          name: repositorie-data
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 30
        timeoutSeconds: 5
  volumes:
    - name: repositorie-data
      persistentVolumeClaim:
        claimName: repositorie-data-claim
status: {}
