kubernetes/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - args:
        - app:nginx
        image: sameersbn/owncloud:10.0.10-0
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
