kubernetes/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
      labels:
        app: researchdatarepositorie
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  hostNetwork: true
  dnsPolicy: Default
