kubernetes/owncloud-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: owncloud
  name: owncloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: owncloud
    spec:
      containers:
      - args:
        - app:owncloud
        image: sameersbn/owncloud:10.0.10-0
        name: owncloud
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/owncloud
          name: repositorie-data
      restartPolicy: Always
      volumes:
        - name: repositorie-data
          persistentVolumeClaim:
            claimName: repositorie-data-claim
status: {}
