kubernetes/owncloud-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: owncloud
  labels:
    name: owncloud
spec:
  containers:
    - name: owncloud
      image: sameersbn/owncloud:10.0.10-0
      args: ["app:owncloud"]
      ports:
        - name: php-fpm
          containerPort: 9000
          protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/owncloud
          name: repositorie-data
      livenessProbe:
        tcpSocket:
          port: 9000
        initialDelaySeconds: 5
        timeoutSeconds: 1
  volumes:
    - name: repositorie-data
      persistentVolumeClaim:
        claimName: repositorie-data-claim
status: {}
