kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
      name: rdr
      labels:
        app: rdr
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  hostNetwork: true
  dnsPolicy: Default
