kubernetes/postgis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: postgis
  name: postgis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgis
      namespace: repositorie
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: geonetwork
        - name: POSTGRES_USER
          value: geonetwork
        image: mdillon/postgis
        name: db4geonetwork
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: repositorie-data
      restartPolicy: Always
      volumes:
        - name: repositorie-data
          persistentVolumeClaim:
            claimName: repositorie-data-claim
status: {}
