kubernetes/postgis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgis
  labels:
    name: postgis
spec:
  containers:
    - name: postgis
      image: mdillon/postgis
      ports:
        - containerPort: 5433
          protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: repositorie-data
      livenessProbe:
        tcpSocket:
          port: 5433
        initialDelaySeconds: 30
        timeoutSeconds: 5
  volumes:
    - name: repositorie-data
      persistentVolumeClaim:
        claimName: repositorie-data-claim
status: {}
