kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labTEST
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labTEST
        io.kompose.service: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: geonetwork
        - name: POSTGRES_USER
          value: geonetwork
        image: mdillon/postgis
        name: db4geonetwork
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
      restartPolicy: Always
      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres
status: {}
