kubernetes/postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: postgresql
  name: postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      containers:
      - env:
        - name: DB_NAME
          value: owncloud_db
        - name: DB_PASS
          value: password
        - name: DB_USER
          value: owncloud
        image: sameersbn/postgresql:9.6-4
        name: postgresql
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: repositorie-data
      restartPolicy: Always
      volumes:
        - name: repositorie-data
          persistentVolumeClaim:
            claimName: repositorie-data-claim
status: {}
