kubernetes/postgresql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  labels:
    name: postgresql
spec:
  containers:
    - name: postgresql
      image: sameersbn/postgresql:9.6-4
      ports:
        - containerPort: 5432
          protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/postgresql
          name: repositorie-data
      livenessProbe:
        tcpSocket:
          port: 5432
        initialDelaySeconds: 30
        timeoutSeconds: 5
  volumes:
    - name: repositorie-data
      persistentVolumeClaim:
        claimName: repositorie-data-claim
status: {}
