kubernetes/geonetwork-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: geonetwork
  name: geonetwork
spec:
  selector:
    io.kompose.service: geonetwork
  ports:
    - port: 8082
      targetPort: 8080
      protocol: TCP
  type: NodePort
