kubernetes/geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: geoserver
  name: geoserver
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8080
  selector:
    io.kompose.service: geoserver
status:
  loadBalancer: {}
