kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  ports:
  - name: "10080"
    port: 10080
    targetPort: 80
  selector:
    name: nginx
  type: NodePort
