kubernetes/owncloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: repositorie
spec:
  ports:
    - name: php-fpm
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    service: owncloud
