kubernetes/postgis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgis
  labels:
    name: postgis
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: NodePort
