kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${RDR_NAME}_postgres
  labels:
    app: ${RDR_NAME}
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: ${RDR_NAME}
