kubernetes/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: drupal
spec:
  ports:
    - port: 5432
  selector:
    matchLabels:
      name: postgreSQL
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: drupal
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: postgreSQL
    spec:
      containers:
        - image: postgres:latest
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-claim
