kubernetes/nginx-ingess.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: terrabrasilisresearchdata.dpi.inpe.br
  - http:
      paths:

      - backend:
          serviceName: http-svc
          servicePort: 80

      - path: /
        backend:
          serviceName: postgres
          servicePort: 5432

      - path: /
        backend:
          serviceName: geoserver
          servicePort: 8081
          
      - path: /
        backend:
          serviceName: geonetwork
          servicePort: 8080
