kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx
  selector:
    matchLabels:
      app: labtest  
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - http:
      paths:
        - path: /labtest
          backend:
            serviceName: postgres
            servicePort: 5432

        - path: /labtest
          backend:
            serviceName: geoserver
            servicePort: 8081
            
        - path: /labtest
          backend:
            serviceName: geonetwork
            servicePort: 8080

        - path: /labtest
          backend:
            serviceName: ssh
            servicePort: 22
